==> cookj273/MODBUS/example/ESP32/modbus_port.c <==
#include "modbus_port.h"
#include "modbus_module.h"

bool modbus_port_init(uint8_t port, uint32_t baudRate, uint8_t charSize, modbus_parity parity, uint8_t stopBits, uint16_t timeoutBits,
                      void (*rxCallback)(uint8_t port), void (*txCallback)(uint8_t port), void (*timeoutCallback)(uint8_t port))
{
    //int32_t test, psc, timeArr, mbTimeout;
    //uint32_t tempBaud;
    uint16_t tempStopBits, tempCharSize;
    uart_parity_t tempParity;

    //We only have one port!
    if(port != MB_RTU_PORT_NUM) {
        return false;
    }

    //Bind our callbacks
    rxIntFunc = rxCallback;
    txIntFunc = txCallback;
    timeoutIntFunc = timeoutCallback;


    //Register our interrupt handler
//    Enabled = false;
//    inInterrupt = false;

    if (parity == MODBUS_PARITY_NONE){
        tempParity = UART_PARITY_DISABLE;
    } else if (parity == MODBUS_PARITY_ODD) {
        tempParity = UART_PARITY_ODD;
    } else {
        tempParity = UART_PARITY_EVEN;
    }

    // Set number of stop bits
    if (stopBits == 1){
        tempStopBits = UART_STOP_BITS_1;
    } else {
        tempStopBits = UART_STOP_BITS_2;
    }

    // Set character size
    switch(charSize) {
        case 5:
            tempCharSize = UART_DATA_5_BITS;
        break;
        case 6:
            tempCharSize = UART_DATA_6_BITS;
        break;
        case 7:
            tempCharSize = UART_DATA_7_BITS;
        break;
        case 8:
        	tempCharSize = UART_DATA_8_BITS;
        break;
        default:
            tempCharSize = UART_DATA_8_BITS;
        break;
    }

    uart_config_t uart_config = {
            .baud_rate = baudRate,
            .data_bits = tempCharSize,
            .parity = tempParity,
            .stop_bits = tempStopBits,
			.rx_flow_ctrl_thresh = 122,
            .flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
            .source_clk = UART_SCLK_DEFAULT,
	};

    ESP_ERROR_CHECK(uart_driver_install(MODBUS_UART_NUM, MODBUS_BUF_SIZE * 2, MODBUS_BUF_SIZE * 2, 20, NULL, 0));

	// Configure UART parameters
	ESP_ERROR_CHECK(uart_param_config(MODBUS_UART_NUM, &uart_config));

	// Set UART pins as per KConfig settings
	ESP_ERROR_CHECK(uart_set_pin(MODBUS_UART_NUM, MODBUS_TRANSMIT, MODBUS_RECEIVE, MODBUS_RTS, MODBUS_CTS));

	// Set RS485 half duplex mode
	ESP_ERROR_CHECK(uart_set_mode(MODBUS_UART_NUM, UART_MODE_UART));

	ESP_ERROR_CHECK(uart_set_rx_timeout(MODBUS_UART_NUM, MODBUS_TOUT));

//    Enabled = true;

    //Enable The UART
    modbus_port_serial_enable(port,false,false);

    // Sanity Check for Modbus Connection
//    while(true){
//    	uint16_t buf[1] = {'U'};
//   	    uart_write_bytes(MODBUS_UART_NUM, buf, 1);
//        vTaskDelay(100 / portTICK_PERIOD_MS);
//    }

    return true;
}

void modbus_port_serial_enable(uint8_t port, bool rxEnable, bool txEnable)
{

    //We only have one port, if not it then abort
    if(port != MB_RTU_PORT_NUM) {
        return;
    }

    if(txEnable) {
    	waiting_for_complete = true;
    }
}

void modbus_port_serial_close(uint8_t port)
{
    //We only have one port, so if not it then abort
    if(port >= NUM_MODBUS_PORTS) {
        return;
    }

    if(port == MB_TCP_PORT_NUM){
    	// TODO: Implement close socket here. Example is close(socket);
//		disconnect(mbSocket);
    } else {
    	//Turn off RX and TX
    	uart_driver_delete(MODBUS_UART_NUM);
    }

}

void modbus_port_notify_of_tx_completion(uint8_t port)
{

    //We only have one port, so if not it then abort
	if(port >= NUM_MODBUS_PORTS) {
	        return;
	}
	 if(port == MB_TCP_PORT_NUM){
		tcpSend = true;
	} else {
		waiting_for_complete = true;
	}
}

bool modbus_port_put_byte(uint8_t port, uint8_t sndByte)
{
	uint16_t buf[1] = {sndByte};

    //We only have one port, so if not it then abort
	if(port >= NUM_MODBUS_PORTS) {
		return false;
	}
	 if(port == MB_TCP_PORT_NUM) {
		if((tcpTxStop != (tcpTxStart-1)) && ((tcpTxStop != (sizeof(tcpTxBuf)-1)) || (tcpTxStart != 0))) {
			tcpTxBuf[tcpTxStop++] = sndByte;
			if(tcpTxStop >= sizeof(tcpTxBuf)) {
				tcpTxStop = 0;
			}
			if((tcpTxStop == (tcpTxStart-1)) || ((tcpTxStop == (sizeof(tcpTxBuf)-1)) && (tcpTxStart == 0))) {
				tcpSend = true;
			}
			return true;
		}
	} else {
		uart_write_bytes(MODBUS_UART_NUM, buf, 1);
		waiting_for_complete = true;
		return true;
	}
	return false;
}

bool modbus_port_get_byte(uint8_t port, uint8_t *getByte)
{
    //We only have one port, so if not it abort
	if(port >= NUM_MODBUS_PORTS) {
		return false;
	}
	if(port == MB_TCP_PORT_NUM){
		 if(tcpRxStart != tcpRxStop) {
			*getByte = tcpRxBuf[tcpRxStart++];
			if(tcpRxStart >= sizeof(tcpRxBuf)) {
				tcpRxStart = 0;
			}
			return true;
		}
	} else {
		*getByte = rx_data;
		return true;
	}

	return false;
}

void modbus_port_timer_enable(uint8_t port, bool enable) {
    //We only have one port if not it abort
	if(port >= NUM_MODBUS_PORTS) {
		return;
	}

	if(port == MB_TCP_PORT_NUM){
		if(enable) {
			tcpTimerTicks = *mb_ticks;
			tcpTimerActive = true;
		} else {
			tcpTimerTicks = 0;
			tcpTimerActive = false;
		}
	} else {
		// UART Timer Timeout handled by library for ESP32
	}
}
