==> cookj273/MODBUS/example/NRF52840/modbus_port.c <==
#include "modbus_port.h"
#include "global.h"
#include "socket.h"
#include "timer.h"
#include "prs/nrfx_prs.h"
#include "nrf_drv_uart.h"
#include <nrfx_uart.h>
#include "app_timer.h"
#include "nrf_drv_clock.h"
#define TCP_PORT_IDX(a) (a - MB_TCP_REDUND_PORT_NUM)

bool modbus_port_init(uint8_t port, uint32_t baudRate, uint8_t charSize, modbus_parity parity, uint8_t stopBits, uint16_t timeoutBits,
                      void (*rxCallback)(uint8_t port), void (*txCallback)(uint8_t port), void (*timeoutCallback)(uint8_t port))
{
    static bool isInited = false;
    int test, psc, mbTimeout;
    nrf_drv_uart_config_t config = NRF_DRV_UART_DEFAULT_CONFIG;

    //We only have one port!
    if((port != MB_RTU_SLAVE_PORT_NUM) && (port != MB_RTU_MASTER_PORT_NUM)) {
        return false;
    }

    //Char size > 8 we can't support if parity is on (9th bit needed for parity)
    sevenBit = false;
    if((charSize < 7) || ((charSize > 8) && (parity != MODBUS_PARITY_NONE)) || (charSize > 9)) {
        return false;
    } else if(stopBits != 1) {
        //This CPU only supports 1 stop bit
        return false;
    } else if(charSize == 7) {
        //The CPU can't support 7-bit mode so we have to use 2 stop bits and make our 8th bit a stop
        if(parity != MODBUS_PARITY_NONE) {
            return false;
        }
        stopBits = 2;
        sevenBit = true;
    }

    //Bind our callbacks
    rxIntFunc = rxCallback;
    txIntFunc = txCallback;
    timeoutIntFunc = timeoutCallback;

    //Init directional pin for half-duplex
    nrf_gpio_cfg_output(MB_RTU_DIR_PIN);
    nrf_gpio_pin_clear(MB_RTU_DIR_PIN);

    //Init Timer
    if(!isInited) {
      if(app_timer_create(&m_modbus_timer, APP_TIMER_MODE_SINGLE_SHOT, timeout_handler) != NRF_SUCCESS) {
          return false;
      }
    }

    //Setup config and init uart
    mbIntPort = port;         //ONLY 1 INSTANCE PER PORT OBVIOUSLY SO LAST IN WINS
    nrfPortInfo[port].port = port;
    nrfPortInfo[port].uartReg = &(uart_driver_instance.uart);
    nrfPortInfo[port].waitOnLast = false;
    nrfPortInfo[port].appTimerTicks = (((int)timeoutBits * (((int)APP_TIMER_CLOCK_FREQ*100)/(int)baudRate))+90)/100; //Round up mostly (.1 or more)
    if(nrfPortInfo[port].appTimerTicks < 5) {
        nrfPortInfo[port].appTimerTicks = 5;
    }
    config.p_context = &nrfPortInfo[port];
    config.use_easy_dma = false;
    config.pseltxd  = MB_RTU_TX_PIN;
    config.pselrxd  = MB_RTU_RX_PIN;
    if(baudRate <= 1200) {
        config.baudrate = NRF_UART_BAUDRATE_1200;
    } else if(baudRate <= 2400) {
        config.baudrate = NRF_UART_BAUDRATE_2400;
    } else if(baudRate <= 4800) {
        config.baudrate = NRF_UART_BAUDRATE_4800;
    } else if(baudRate <= 9600) {
        config.baudrate = NRF_UART_BAUDRATE_9600;
    } else if(baudRate <= 14400) {
        config.baudrate = NRF_UART_BAUDRATE_14400;
    } else if(baudRate <= 19200) {
        config.baudrate = NRF_UART_BAUDRATE_19200;
    } else if(baudRate <= 28800) {
        config.baudrate = NRF_UART_BAUDRATE_28800;
    } else if(baudRate <= 31250) {
        config.baudrate = NRF_UART_BAUDRATE_31250;
    } else if(baudRate <= 38400) {
        config.baudrate = NRF_UART_BAUDRATE_38400;
    } else if(baudRate <= 56000) {
        config.baudrate = NRF_UART_BAUDRATE_56000;
    } else if(baudRate <= 57600) {
        config.baudrate = NRF_UART_BAUDRATE_57600;
    } else if(baudRate <= 76800) {
        config.baudrate = NRF_UART_BAUDRATE_76800;
    } else if(baudRate <= 115200) {
        config.baudrate = NRF_UART_BAUDRATE_115200;
    } else if(baudRate <= 230400) {
        config.baudrate = NRF_UART_BAUDRATE_230400;
    } else if(baudRate <= 250000) {
        config.baudrate = NRF_UART_BAUDRATE_250000;
    } else if(baudRate <= 460800) {
        config.baudrate = NRF_UART_BAUDRATE_460800;
    } else if(baudRate <= 921600) {
        config.baudrate = NRF_UART_BAUDRATE_921600;
    } else {
        config.baudrate = NRF_UART_BAUDRATE_1000000;
    }

#if NRFX_CHECK(NRFX_PRS_ENABLED)
    static nrfx_irq_handler_t const irq_handlers[NRFX_UART_ENABLED_COUNT] = {
        #if NRFX_CHECK(NRFX_UART0_ENABLED)
        nrfx_uart_0_irq_handler,
        #endif
    };

    if(!isInited) {
      if (nrfx_prs_acquire(nrfPortInfo[port].uartReg->p_reg, irq_handlers[nrfPortInfo[port].uartReg->drv_inst_idx]) != NRFX_SUCCESS) {
          return false;
      }
    }
#endif // NRFX_CHECK(NRFX_PRS_ENABLED)

    //Setup and Initialize
    nrf_gpio_pin_set(config.pseltxd);
    nrf_gpio_cfg_output(config.pseltxd);
    nrf_gpio_cfg_input(config.pselrxd, NRF_GPIO_PIN_NOPULL);
    nrf_uart_baudrate_set(nrfPortInfo[port].uartReg->p_reg, config.baudrate);
    nrf_uart_configure(nrfPortInfo[port].uartReg->p_reg, config.parity, config.hwfc);
    nrf_uart_txrx_pins_set(nrfPortInfo[port].uartReg->p_reg, config.pseltxd, config.pselrxd);

    //Turn interttupts on but disable
    nrf_uart_int_disable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_RXDRDY | NRF_UART_INT_MASK_ERROR | NRF_UART_INT_MASK_TXDRDY | NRF_UART_INT_MASK_RXTO);
    NRFX_IRQ_PRIORITY_SET(nrfx_get_irq_number((void *)nrfPortInfo[port].uartReg->p_reg), config.interrupt_priority);
    NRFX_IRQ_ENABLE(nrfx_get_irq_number((void *)nrfPortInfo[port].uartReg->p_reg));

    //Enable the UART
    nrf_uart_enable(nrfPortInfo[port].uartReg->p_reg);

    //Start disabled
    modbus_port_serial_enable(port, false, false);

    isInited = true;
    return true;
}

void modbus_port_serial_enable(uint8_t port, bool rxEnable, bool txEnable)
{
    //We only have one port, if not it then abort
    if((port != MB_RTU_SLAVE_PORT_NUM) && (port != MB_RTU_MASTER_PORT_NUM)) {
        return;
    }

    //Stop our timer and disable interrupts
    app_timer_stop(m_modbus_timer);
    uart_interrupts_disable(nrfPortInfo[port].uartReg);
    nrfPortInfo[port].disableInt = true;

    //Enable or disable receiving
    if(rxEnable) {
        //Disable driver out
        nrf_gpio_pin_clear(MB_RTU_DIR_PIN);

        app_timer_start(m_modbus_timer, nrfPortInfo[port].appTimerTicks, &nrfPortInfo[port]);

        nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_ERROR);
        nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_RXDRDY);
        nrf_uart_int_enable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_RXDRDY | NRF_UART_INT_MASK_ERROR);
        nrf_uart_task_trigger(nrfPortInfo[port].uartReg->p_reg, NRF_UART_TASK_STARTRX);

    } else {
        nrf_uart_int_disable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_RXDRDY | NRF_UART_INT_MASK_ERROR);
        nrf_uart_task_trigger(nrfPortInfo[port].uartReg->p_reg, NRF_UART_TASK_STOPRX);
    }

    //Enable or disable transmitting
    if(txEnable && !rxEnable) {
        //Enable driver out
        nrf_gpio_pin_set(MB_RTU_DIR_PIN);

        nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_TXDRDY);
        nrf_uart_task_trigger(nrfPortInfo[port].uartReg->p_reg, NRF_UART_TASK_STARTTX);
        nrf_uart_int_enable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_TXDRDY);

        //Prime the first byte
        if(txIntFunc) {
            txIntFunc(port);
        }
    } else {
        nrfPortInfo[port].waitOnLast = false;
        nrf_uart_int_disable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_TXDRDY);
        nrf_uart_task_trigger(nrfPortInfo[port].uartReg->p_reg, NRF_UART_TASK_STOPTX);
    }

    nrfPortInfo[port].disableInt = false;
    uart_interrupts_enable(nrfPortInfo[port].uartReg);
}

void modbus_port_serial_close(uint8_t port)
{
    //We only have one port, so if not it then abort
    if(port >= NUM_MODBUS_PORTS) {
        return;
    }

    if((port == MB_TCP_REDUND_PORT_NUM) || (port == MB_TCP_COMMS_PORT_NUM)) {
        disconnect(mbSocket[TCP_PORT_IDX(port)]);
    } else {
        app_timer_stop(m_modbus_timer);
        nrf_uart_int_disable(nrfPortInfo[port].uartReg->p_reg, NRF_UART_INT_MASK_RXDRDY | NRF_UART_INT_MASK_TXDRDY | NRF_UART_INT_MASK_ERROR  | NRF_UART_INT_MASK_RXTO);
        NRFX_IRQ_DISABLE(nrfx_get_irq_number((void *)nrfPortInfo[port].uartReg->p_reg));
        nrf_uart_disable(nrfPortInfo[port].uartReg->p_reg);
        nrf_gpio_cfg_default(MB_RTU_TX_PIN);
        nrf_gpio_cfg_default(MB_RTU_RX_PIN);  
#if NRFX_CHECK(NRFX_PRS_ENABLED)
        nrfx_prs_release(nrfPortInfo[port].uartReg->p_reg);
#endif
    }
}

void modbus_port_notify_of_tx_completion(uint8_t port)
{
    //We only have one port, so if not it then abort
    if(port >= NUM_MODBUS_PORTS) {
        return;
    }

    if((port == MB_TCP_REDUND_PORT_NUM) || (port == MB_TCP_COMMS_PORT_NUM)) {
        tcpSend[TCP_PORT_IDX(port)] = true;
    } else {
        //Set a flag so the interrupt knows to start a timer for last byte
        nrfPortInfo[port].waitOnLast = true;
    }
}

bool modbus_port_put_byte(uint8_t port, uint8_t sndByte)
{
    //We only have one port, so if not it then abort
    if(port >= NUM_MODBUS_PORTS) {
        return false;
    }

    if((port == MB_TCP_REDUND_PORT_NUM) || (port == MB_TCP_COMMS_PORT_NUM)) {
        if((tcpTxStop[TCP_PORT_IDX(port)] != (tcpTxStart[TCP_PORT_IDX(port)]-1)) && ((tcpTxStop[TCP_PORT_IDX(port)] != (sizeof(tcpTxBuf[TCP_PORT_IDX(port)])-1)) || (tcpTxStart[TCP_PORT_IDX(port)] != 0))) {
            tcpTxBuf[TCP_PORT_IDX(port)][tcpTxStop[TCP_PORT_IDX(port)]++] = sndByte;
            if(tcpTxStop[TCP_PORT_IDX(port)] >= sizeof(tcpTxBuf[TCP_PORT_IDX(port)])) {
                tcpTxStop[TCP_PORT_IDX(port)] = 0;
            }
            if((tcpTxStop[TCP_PORT_IDX(port)] == (tcpTxStart[TCP_PORT_IDX(port)]-1)) || ((tcpTxStop[TCP_PORT_IDX(port)] == (sizeof(tcpTxBuf[TCP_PORT_IDX(port)])-1)) && (tcpTxStart[TCP_PORT_IDX(port)] == 0))) {
                tcpSend[TCP_PORT_IDX(port)] = true;
            }
        } else {
            
        }
    } else {
        nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_TXDRDY);
        nrf_uart_txd_set(nrfPortInfo[port].uartReg->p_reg, (sevenBit?(0x80 | sndByte):sndByte));
        return true;
    }

    return false;
}

bool modbus_port_get_byte(uint8_t port, uint8_t *getByte)
{
    //We only have one port, so if not it abort
    if(port >= NUM_MODBUS_PORTS) {
        return false;
    }

    if((port == MB_TCP_REDUND_PORT_NUM) || (port == MB_TCP_COMMS_PORT_NUM)) {
        if(tcpRxStart[TCP_PORT_IDX(port)] != tcpRxStop[TCP_PORT_IDX(port)]) {
            *getByte = tcpRxBuf[TCP_PORT_IDX(port)][tcpRxStart[TCP_PORT_IDX(port)]++];
            if(tcpRxStart[TCP_PORT_IDX(port)] >= sizeof(tcpRxBuf[TCP_PORT_IDX(port)])) {
                tcpRxStart[TCP_PORT_IDX(port)] = 0;
            }
            return true;
        }
    } else {
        if(nrf_uart_event_check(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_ERROR)) {
            //Just clear, let more bytes come in and let timeout trigger end of bad packet to fresh start
            nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_ERROR);
        }
        if(nrf_uart_event_check(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_RXDRDY)) {
            nrf_uart_event_clear(nrfPortInfo[port].uartReg->p_reg, NRF_UART_EVENT_RXDRDY);
            *getByte = nrf_uart_rxd_get(nrfPortInfo[port].uartReg->p_reg);
            //If seven-bit it means the last bit is our stop bit we need to mask off
            if(sevenBit) {
                *getByte &= 0x7F;
            }
            return true;
        }
    }
    return false;
}

void modbus_port_timer_enable(uint8_t port, bool enable) {
    //We only have one port if not it abort
    if(port >= NUM_MODBUS_PORTS) {
        return;
    }
    
    if((port == MB_TCP_REDUND_PORT_NUM) || (port == MB_TCP_COMMS_PORT_NUM)) {
        if(enable) {
            tcpTimerTicks[TCP_PORT_IDX(port)] = get_sys_ticks();
            tcpTimerActive[TCP_PORT_IDX(port)] = true;
        } else {
            tcpTimerTicks[TCP_PORT_IDX(port)] = 0;
            tcpTimerActive[TCP_PORT_IDX(port)] = false;
        }
    } else {
        //Enable or disable as requested
        if(enable) {
            //Even if already enabled reset the count here
            app_timer_stop(m_modbus_timer);
            app_timer_start(m_modbus_timer, nrfPortInfo[port].appTimerTicks, &nrfPortInfo[port]);
        } else {
            app_timer_stop(m_modbus_timer);
        }
    }
}
